2011-02-21  James Kozianski  <koz@chromium.org>

        Reviewed by Kent Tamura.

        Causes elements to be unfocusable after tabindex property is removed.
        https://bugs.webkit.org/show_bug.cgi?id=54727

        Test: fast/html/tabindex-removal.html

        * dom/Node.cpp:
        (WebCore::Node::clearTabIndexExplicitly):
        * dom/Node.h:
        * dom/NodeRareData.h:
        (WebCore::NodeRareData::clearTabIndexExplicitly):
        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::parseMappedAttribute):

2011-02-21  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Mark Rowe.

        <rdar://problem/8995483> Remove stubs of unneeded NSURLAuthenticationChallengeSender methods

        * platform/network/mac/AuthenticationMac.mm: Remove the stubs that are no longer needed.

2011-02-21  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Overhang areas need to be invalidated on scroll
        <rdar://problem/9032194>
        https://bugs.webkit.org/show_bug.cgi?id=54917

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::scrollContents):
        We need to explicitly invalidate the overhang areas when we scroll the contents
        of a ScrollView, since they could contain arbitrary content that cannot be blitted.

2011-02-21  Lucas Forschler  <lforschler@apple.com>

        Reviewed by Stephanie Lewis.

        Fix the Leopard Debug build by incorporating the RenderSVGAllInOne.cpp

        No new tests required.

        * WebCore.xcodeproj/project.pbxproj:

2011-02-21  Pratik Solanki  <psolanki@apple.com>

        Reviewed by Darin Adler.

        Remove global initializer in CookieStorageCFNet.cpp
        https://bugs.webkit.org/show_bug.cgi?id=54905

        * platform/network/cf/CookieStorageCFNet.cpp:
        (WebCore::currentCookieStorage):
        (WebCore::setCurrentCookieStorage):
        (WebCore::setCookieStoragePrivateBrowsingEnabled):

2011-02-18  Jer Noble  <jer.noble@apple.com>
